--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>home-page</title>
+    <link rel="stylesheet" href="<%= BASE_URL %>preload.css">
+    <title>mars-web</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but home-page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div id="loader-wrapper">
+      <div id="loader"></div>
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
+    </div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="<%= BASE_URL %>jquery-1.9.1.min.js"></script>
+  <script>
+  $(document).ready(function() {
+      setTimeout(function(){
+        $('body').addClass('loaded');
+      }, 1500);
+    });
+  </script>
 </html>
