--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="<%= BASE_URL %>preload.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>style/preload.css">
+
     <title>mars-web</title>
   </head>
   <body>
@@ -20,7 +21,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script src="<%= BASE_URL %>jquery-1.9.1.min.js"></script>
+  <script src="<%= BASE_URL %>lib/jquery-1.9.1.min.js"></script>
   <script>
   $(document).ready(function() {
       var animateDelay = Math.random() * 1000 + 500;
