--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>style/preload.css">
 
-    <title>mars-web</title>
+    <title>Citizen</title>
   </head>
   <body>
     <noscript>
