--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,13 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but home-page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but web-page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="loader-wrapper">
+    <!-- <div id="loader-wrapper">
       <div id="loader"></div>
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
-    </div>
+    </div> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
