--- a/public/index.html
+++ b/public/index.html
@@ -21,3 +21,16 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html>
